Second edits are ready

--- a/src/achievements.pug
+++ b/src/achievements.pug
@@ -12,7 +12,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'О нас', link: 'about.html'}, {text: 'Наши достижения'}], 'Наши достижения')
 
 block content
-    section
+    .section
         .container
             .pageLayout
                 +asideForAbout(4)
