--- a/src/components/UI/checkbox.pug
+++ b/src/components/UI/checkbox.pug
@@ -2,4 +2,4 @@ mixin checkbox(text, name, value)
     label.checkbox
         input(type='checkbox', name=name value=value)
         span.checkbox__mark
-        div.checkbox__text= text
+        span.checkbox__text= text
