--- a/src/components/UI/radio.pug
+++ b/src/components/UI/radio.pug
@@ -2,5 +2,5 @@ mixin radio(text, name, value)
     label.radioBox
         input(type='radio', name=name value=value)
         span.radioBox__circle
-        div.radioBox__text= text
+        span.radioBox__text= text
 
