--- a/src/components/UI/select.pug
+++ b/src/components/UI/select.pug
@@ -15,4 +15,4 @@ mixin select(items, name, className)
                 li.select-list__item
                     label
                         input(type='radio', name=name checked= index === 0, data-display-on-change= item.value)
-                        div.select__div= item.value
+                        span.select__div= item.value
