--- a/src/employee_2.pug
+++ b/src/employee_2.pug
@@ -14,7 +14,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'О нас', link: 'about.html'}, {text: 'Наш коллектив', link: 'collective.html'}, {text: 'Страница работника'}], 'Анна Гордеева')
 
 block content
-    section
+    .section
         .container
             .pageLayout
                 +asideForAbout(1)
