--- a/src/galleries.pug
+++ b/src/galleries.pug
@@ -12,7 +12,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'О нас', link: 'about.html'}, {text: 'Наши галереи'}], 'Наши галереи')
 
 block content
-    section
+    .section
         .container
             .pageLayout
                 +asideForAbout(2)
