--- a/src/galleriesTags.pug
+++ b/src/galleriesTags.pug
@@ -12,7 +12,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'О нас', link: 'about.html'}, {text: 'Галереи по тегу'}], 'Галереи по тегу #солнышко')
 
 block content
-    section
+    .section
         .container
             div.w-100
                 div.d-gap.gridX5
