--- a/src/gallery.pug
+++ b/src/gallery.pug
@@ -18,7 +18,7 @@ block content
     - var buttonCollectiveText = 'Смотреть все фото группы'
     - var noSection = true
 
-    section
+    .section
         .container
             .weakText 12 июля 2023
             +galleryGrid('mt-step')
