--- a/src/layouts/modules/parts/bigBannerGrey.pug
+++ b/src/layouts/modules/parts/bigBannerGrey.pug
@@ -11,5 +11,4 @@ section
             .banner__image
                 picture.img
                     source(srcset="@img/temporary/banner-1.png" media="(min-width: 601px)")
-                    source(srcset="@img/temporary/banner-1-mobile.png")
-                    img(src="@img/temporary/banner-1.png" alt='image')
+                    img(src="@img/temporary/banner-1-mobile.png" alt='image')
