--- a/src/map.pug
+++ b/src/map.pug
@@ -9,7 +9,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'Карта сайта'}], 'Карта сайта')
 
 block content
-    section
+    .section
         .container
             ul.list.list--hover
                 li
