--- a/src/news.pug
+++ b/src/news.pug
@@ -10,7 +10,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'Наши новости'}], 'Наши новости')
 
 block content
-    section
+    .section
         .container
             .mt-step.gridX2.d-gap.gridX2--fastReverse
                 +news('gridX2Item')
