--- a/src/newsPage.pug
+++ b/src/newsPage.pug
@@ -11,7 +11,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'Наши новости', link: 'news.html'}, {text: 'Страница Новости'}], 'Страница Новости')
 
 block content
-    section
+    .section
         .container
             .weakText 12 июля 2023
             .text-editor.flex.flex-column.d-gap.mt-step
