--- a/src/ourGroups.pug
+++ b/src/ourGroups.pug
@@ -13,7 +13,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'Наши группы'}], 'Наши группы')
 
 block content
-    section
+    .section
         .container
             .gridX2.d-gap
                 each text in ['Солнышко', 'С более длинным названием', 'С очень очень очень длинным названием', 'Солнышко', 'Солнышко', 'С более длинным названием', 'С очень очень очень длинным названием', 'С более длинным названием', 'Солнышко', 'С более длинным названием']
