--- a/src/styles/assets/vars.sass
+++ b/src/styles/assets/vars.sass
@@ -4,7 +4,8 @@
 
 $defaultTransitionDuration: .3s
 
-$maxContentWidth: 1440px
+$maxContentWidthNumber: 1440
+$maxContentWidth: $maxContentWidthNumber + px
 $contentPaddings: 25px
 $contentMobilePaddings: 15px
 
