--- a/src/textPage.pug
+++ b/src/textPage.pug
@@ -9,7 +9,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'Текстовая страница'}], 'Текстовая страница')
 
 block content
-    section
+    .section
         .container
             .text-editor.flex.d-gap.flex-column
                 - var index = 0;
