--- a/src/employee.pug
+++ b/src/employee.pug
@@ -12,7 +12,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'О нас', link: 'about.html'}, {text: 'Наш коллектив', link: 'collective.html'}, {text: 'Страница работника'}], 'Иван Иванов')
 
 block content
-    section
+    .section
         .container
             .pageLayout
                 +asideForAbout(1)
