--- a/src/ourVideos.pug
+++ b/src/ourVideos.pug
@@ -11,7 +11,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'О нас', link: 'about.html'}, {text: 'Наши видео'}], 'Наши видео')
 
 block content
-    section
+    .section
         .container
             .pageLayout
                 +asideForAbout(3)
