--- a/src/questions.pug
+++ b/src/questions.pug
@@ -12,7 +12,7 @@ block breadcrumbs
 
 
 block content
-    section
+    .section
         .container
             .pageLayout
                 +asideForParents(3)
