--- a/src/requires.pug
+++ b/src/requires.pug
@@ -15,7 +15,7 @@ block breadcrumbs
 
 
 block content
-    section
+    .section
         .container
             .pageLayout
                 +asideForInformation(4)
