--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -321,6 +321,7 @@ svg
         vertical-align: middle
 
 
+.section,
 section
 
   &:not(:last-child)
@@ -437,6 +438,8 @@ section
 
   iframe
     border: 0
+    width: 100%
+    height: 100%
 
 
 .table-wrapper
