--- a/src/styles/modules/UI/select.sass
+++ b/src/styles/modules/UI/select.sass
@@ -74,7 +74,7 @@
         opacity: 0
         transition: .5s opacity
 
-    input:checked + div
+    input:checked + .select__div
       color: #fff
       background: var(--checkedSelectItemBackground)
       &:after
