--- a/src/styles/modules/parts/video.sass
+++ b/src/styles/modules/parts/video.sass
@@ -32,6 +32,10 @@
       opacity: 0
 
     &.withBlur
+
+      .videoSign
+        z-index: 3
+
       &:before
         content: ''
         width: 100%
