--- a/src/usefulLinks.pug
+++ b/src/usefulLinks.pug
@@ -13,7 +13,7 @@ block breadcrumbs
     +breadcrumbs([{text: 'Полезные ссылки'}], 'Полезные ссылки')
 
 block content
-    section
+    .section
         .container
             .flex.flex-wrap.flex-j-c.d-gap
                 - var r_index = 1;
