The bug of a third level menu in burger was fixed

--- a/src/layouts/modules/main/header.pug
+++ b/src/layouts/modules/main/header.pug
@@ -98,8 +98,21 @@ header
                                                             a.link(href="galleries.html") Наши галереи
                                                         li
                                                             a.link(href="ourVideos.html") Наши видео
-                                                        li
-                                                            a.link(href="achievements.html") Наши достижения
+                                                        li.header__linkWithSublist
+                                                            a.flex.flex-a-c.flex-j-sb.font-700.link(href="achievements.html") Наши достижения
+                                                                div.select-list__arrow
+                                                                    svg
+                                                                        use(href='@img/icons/icons.svg#arrow-select')
+                                                            .header__sublistWrapper
+                                                                ul.header__sublist
+                                                                    li
+                                                                        a.link(href="achievements.html") 2023 год
+                                                                    li
+                                                                        a.link(href="achievements.html") 2022 год
+                                                                    li
+                                                                        a.link(href="achievements.html") 2021 год
+                                                                    li
+                                                                        a.link(href="achievements.html") 2020 год
                                                         li
                                                             a.link(href="requisites.html") Наши реквизиты
                                             li
