--- a/src/styles/modules/parts/popup.sass
+++ b/src/styles/modules/parts/popup.sass
@@ -15,6 +15,7 @@
   transition: .5s opacity
   z-index: 120
   display: flex
+  touch-action: none
 
   &.active
     opacity: 1
@@ -25,6 +26,11 @@
     max-width: 85%
     max-height: 85%
     color: #fff
+
+  &__optionalImage
+    opacity: 0
+    @include useAbsolutePosition(50%, 50%)
+    transform: translate(-50%, -50%)
 
   &__arrow
     width: em(80, 16)
@@ -42,15 +48,15 @@
     top: 50%
     transform: translateY(-50%)
 
-    @media screen and (max-width: 500px)
-      display: none
-
     &.disabled
       opacity: 0
       pointer-events: none
 
     @media screen and (max-width: 900px)
       font-size: .8em
+
+    @media screen and (max-width: 500px)
+      font-size: .5em
 
     &:before
       content: ''
